--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </div>
   <div class="textContainer">
     <h1>Pizza!</h1>
-    <p>My Favorite Topics: </p>
+    <p>My Favorite Toppings: </p>
     <ul>
-      <li>Cheese</li>
+      <li>Jalapenos</li>
       <li>Peperoni</li>
       <li>Anchovies</li>
     </ul>
