--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li>Jalapenos</li>
       <li>Peperoni</li>
       <li>Anchovies</li>
+      <li>Mozzerella</li>
     </ul>
   </div>
 </div>
